2017-05-16  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_builtin_find_service.c (plugin_do_run): Change default
	number of parallel connections to 6 to match the default one in
	find_service.nasl.

2017-05-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/sighand.c (print_trace): Fix typo in log message.

2017-05-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_builtin_find_service.c (plugin_do_run): Increase rw_timeout
	and wrap_timeout to match cnx_timeout.

2017-05-12  Christian Fischer  <christian.fischer@greenbone.net>

	* doc/openvas-nasl.1, nasl/nasl.c (main): Fix typo.

2017-05-12  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* Changelog: add missing log.

2017-05-11  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_var.c (make_array_from_elems): Initialize pointer 'v'
	to eliminate possible garbage assignment.

2017-05-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (get_next_in_range): New function.
	(plugins_scheduler_next): Use new function.

2017-05-08  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (get_next_plugin): New function.
	(plugins_scheduler_next): Use new function. Run all plugins up to
	ACT_GATHER_INFO before ACT_ATTACK plugins. Run ACT_END plugins after
	finishing other plugins.

2017-05-03  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (plugin_scheduler_next): Hold on launching
	ACT_END plugins until all other plugins have run.

2017-05-03  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_ssh.c: Remove preprocessor directives to check
	the libssh version and the code related to old libssh version.
	(my_ssh_key_s, my_ssh_key_free, remove_and_free_temp_key_file)
	(my_ssh_pki_import_privkey_base64, my_ssh_userauth_try_publickey)
	(my_ssh_userauth_publickey): Remove functions and structs.
	(nasl_ssh_connect, nasl_ssh_userauth): Remove no longer required