@@ -1,5 +1,11 @@
 2017-05-16  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
+	* misc/network.c (open_stream_connection): Add RC4 to the default
+	priority strings as it is disabled in newer versions.
+	(set_gnutls_protocol): Remove outdated comment.
+
+2017-05-16  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
 	* nasl/nasl_builtin_find_service.c (plugin_do_run): Change default
 	number of parallel connections to 6 to match the default one in
 	find_service.nasl.
